--- a/a1.html
+++ b/a1.html
@@ -7,9 +7,7 @@
 </head>
 <body>
 <h1>CSE457 Assignment 1A</h1>
-<p id="info"> Leanne krivaa
-k.leanne@wustl.edu
-uID: 500254</p>
+<p class="info"> Leanne Krivaa | k.leanne@wustl.edu | uID: 500254</p>
 
 <p class = "chartheader"> Bar Chart </p>
 <svg class="chart" width="600" height="300">
@@ -39,41 +37,52 @@ uID: 500254</p>
 </svg>
 
 <p class="chartheader">Line Chart</p>
-<svg height="200" width="450">
-    <path id="lineX" d="M 0 100 L 10 120  L 20 70 L 30 110 L 40 90 L 50 60 L 60 140 L70 160 L 80 80 L 90 130 L 100 150" stroke="blue"
-          stroke-width="2" fill="none" />
-    <line id="lineY" x1="300" y1="80.4" x2="310" y2="110.9" stroke-width="2" stroke="black" />
-    <line id="lineY" x1="310" y1="110.9" x2="320" y2="104.6" stroke-width="2" stroke="black" />
-    <line id="lineY" x1="320" y1="104.6" x2="330" y2="92.3" stroke-width="2" stroke="black" />
-    <line id="lineY" x1="330" y1="92.3" x2="340" y2="97.1" stroke-width="2" stroke="black" />
-    <line id="lineY" x1="340" y1="97.1" x2="350" y2="80.8" stroke-width="2" stroke="black" />
-    <line id="lineY" x1="350" y1="80.8" x2="360" y2="108" stroke-width="2" stroke="black" />
-    <line id="lineY" x1="360" y1="108" x2="370" y2="137.8" stroke-width="2" stroke="black" />
-    <line id="lineY" x1="370" y1="137.8" x2="380" y2="72" stroke-width="2" stroke="black" />
-    <line id="lineY" x1="380" y1="72" x2="390" y2="132.2" stroke-width="2" stroke="black" />
-    <line id="lineY" x1="390" y1="132.2" x2="400" y2="123.6"  stroke-width="2" stroke="black" />
+<svg height="180" width="450">
+    <path id="lineX" d="M 0 100 L 10 120  L 20 70 L 30 110 L 40 90 L 50 60 L 60 140 L70 160 L 80 80 L 90 130 L 100 150"  />
+    <line class="lineY" x1="300" y1="80.4" x2="310" y2="110.9"/>
+    <line class="lineY" x1="310" y1="110.9" x2="320" y2="104.6"/>
+    <line class="lineY" x1="320" y1="104.6" x2="330" y2="92.3"/>
+    <line class="lineY" x1="330" y1="92.3" x2="340" y2="97.1"/>
+    <line class="lineY" x1="340" y1="97.1" x2="350" y2="80.8"/>
+    <line class="lineY" x1="350" y1="80.8" x2="360" y2="108"/>
+    <line class="lineY" x1="360" y1="108" x2="370" y2="137.8"/>
+    <line class="lineY" x1="370" y1="137.8" x2="380" y2="72"/>
+    <line class="lineY" x1="380" y1="72" x2="390" y2="132.2"/>
+    <line class="lineY" x1="390" y1="132.2" x2="400" y2="123.6"/>
 
 </svg>
 
 <p class="chartheader">Filed Line Chart</p>
-<svg height="200" width="450">
-    <path id="lineX" d="M 0 100 L 10 120  L 20 70  L 30 110 L 40 90 L 50 60 L 60 140 L70 160 L 80 80 L 90 130 L 100 150 " stroke="blue"
+<svg height="180" width="600">
+    <path id="lineXFilled" d="M 0 180 L 0 100 L 10 120  L 20 70 L 30 110 L 40 90 L 50 60 L 60 140 L70 160 L 80 80
+     L 90 130 L 100 150 L 100 180" stroke="blue"
           stroke-width="2" fill="blue" />
-    <line id="lineY" x1="300" y1="80.4" x2="310" y2="110.9"  stroke-width="2" stroke="black" />
-    <line id="lineY" x1="310" y1="110.9" x2="320" y2="104.6" stroke-width="2" stroke="black" />
-    <line id="lineY" x1="320" y1="104.6" x2="330" y2="92.3" stroke-width="2" stroke="black" />
-    <line id="lineY" x1="330" y1="92.3" x2="340" y2="97.1" stroke-width="2" stroke="black" />
-    <line id="lineY" x1="340" y1="97.1" x2="350" y2="80.8" stroke-width="2" stroke="black" />
-    <line id="lineY" x1="350" y1="80.8" x2="360" y2="108" stroke-width="2" stroke="black" />
-    <line id="lineY" x1="360" y1="108" x2="370" y2="137.8" stroke-width="2" stroke="black" />
-    <line id="lineY" x1="370" y1="137.8" x2="380" y2="72" stroke-width="2" stroke="black" />
-    <line id="lineY" x1="380" y1="72" x2="390" y2="132.2" stroke-width="2" stroke="black" />
-    <line id="lineY" x1="390" y1="132.2" x2="400" y2="123.6"  stroke-width="2" stroke="black" />
+
+    <path id="lineYFilled" d="M 300 180 L 300 80.4 L 310 110.9  L 320 104.6 L 330 92.3 L 340 97.1 L 350 80.8
+    L 360 108 L 370 137.8 L 380 72 L 390 132.2 L 400 123.6 L 400 180" stroke="blue"
+          stroke-width="2" fill="blue" />
+
+
 
 </svg>
 
 <p class="chartheader">Scatterplot</p>
+<svg width="200" height="200">
+    <circle cx="100" cy="80.4" r="5"/>
+    <circle cx="80" cy="110.9" r="5"/>
+    <circle cx="130" cy="104.6" r="5"/>
+    <circle cx="90" cy="92.3" r="5"/>
+    <circle cx="110" cy="97.1" r="5"/>
+    <circle cx="140" cy="80.8" r="5"/>
+    <circle cx="60" cy="108" r="5"/>
+    <circle cx="40" cy="137.8" r="5"/>
+    <circle cx="120" cy="72" r="5"/>
+    <circle cx="70" cy="132.2" r="5"/>
+    <circle cx="50" cy="123.6" r="5"/>
+    <path id="frame" d="M 5 0 L 200 0 L 200 200 L 5 200 L 5 0" />
 
+
+</svg>
 
 </body>
 </html>
